<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >
 
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp" 
        android:contentDescription="@string/about"
        android:src="@drawable/logo" >
    </ImageView>
 
    <TextView
        android:id="@+id/about_appname"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/logo"
        android:text="@string/app_name" >
    </TextView>
 
    <TextView
        android:id="@+id/about_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_appname"
        android:layout_toRightOf="@id/logo"
        android:text="v" >
    </TextView>
 
    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_appname"
        android:layout_toRightOf="@id/about_version_label"
        android:text="{versionName}" >
    </TextView>
 
    <Button
        android:id="@+id/about_debug_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/about_debug_info" />
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/about_debug_info_button"
        android:layout_below="@id/logo"
        android:orientation="vertical" >
 
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >
 
            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/about_text" >
            </TextView>
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_text"
                android:layout_centerInParent="true"
                android:autoLink="all"
                android:gravity="center"
                android:text="@string/about_link" >
            </TextView>
        </RelativeLayout>
 
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >
 
            <TextView
                android:id="@+id/about_contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/about_contact_text" >
            </TextView>
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_contact_text"
                android:layout_centerInParent="true"
                android:autoLink="all"
                android:gravity="center"
                android:text="@string/about_contact_link" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>
 
</RelativeLayout>